[Pgr]fix:(gallery.scss): fix thumbnail layout not responsive

--- a/pro-gallery-renderer/src/components/styles/gallery.scss
+++ b/pro-gallery-renderer/src/components/styles/gallery.scss
@@ -499,7 +499,7 @@
 
     .gallery-column {
       float: left;
-      // overflow: hidden;
+      overflow: hidden;
       position: relative;
       transform-style: preserve-3d;
       backface-visibility: hidden;
